fixed button invisible

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -2,7 +2,6 @@
   padding: 18px 36px;
   gap: 8px;
   border-radius: 50px;
-  opacity: 0px;
 
   border: 2px solid rgba(110, 182, 60, 1);
   background: none;
